Fixed vote icon spacing

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -323,6 +323,10 @@ body.canvas-menu .nav-header {
     float: none;
   }
   
+  .vote-icon {
+      display: none;
+  }
+  
   #skill-list {
       display: block;
   }
@@ -1803,10 +1807,6 @@ ul.clear-list:first-child {
   color: $text-color-2;
 }
 
-.vote-icon, .vote-title {
-  display: block;
-}
-
 .mail-search {
   max-width: 300px;
 }
@@ -2015,6 +2015,7 @@ ul.clear-list:first-child {
   background-color: $text-color-1;
   border-radius: 50%;
   opacity: 0.7;
+  margin: auto;
   width: 100px;
   height: 100px;
   &.active {
